--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 		</div>
 		<div id="difficult-container">
 			<div class="form-group">
-			    <label for="mines-width">Nb de mines horizontales</label>
+			    <label for="mines-width">Nb de cellules horizontales</label>
 			    <input id="mines-width" type="text" class="form-control" maxlength="3" value="9" />
 		 	</div>
 		 	
 		 	<div class="form-group">
-			    <label for="mines-height">Nb de mines verticales</label>
+			    <label for="mines-height">Nb de cellules verticales</label>
 			    <input id="mines-height" type="text" class="form-control" maxlength="3" value="9" />
 		 	</div>
 		 	
