--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 		<div id="difficult-container">
 			<div class="form-group">
 			    <label for="cells-width">Nb de cellules horizontales</label>
-			    <input id="cells-width" type="text" class="form-control" maxlength="3" value="9" />
+			    <input id="cells-width" type="number" class="form-control" maxlength="2" value="9" />
 		 	</div>
 		 	
 		 	<div class="form-group">
 			    <label for="cells-height">Nb de cellules verticales</label>
-			    <input id="cells-height" type="text" class="form-control" maxlength="3" value="9" />
+			    <input id="cells-height" type="number" class="form-control" maxlength="2" value="9" />
 		 	</div>
 		 	
 		 	<div class="form-group">
